--- a/public/frontend/assets/css/footer.css
+++ b/public/frontend/assets/css/footer.css
@@ -226,6 +226,9 @@
 
 
 @media (max-width: 767.98px) {
+    .footer {
+        padding-top: 5rem;
+    }
     .footer .container {
         padding-left : 24px;
         padding-right: 24px;
@@ -252,9 +255,20 @@
         font-size  : 10.5217px;
         line-height: 12px;
     }
+    .footer h6 {
+        margin-top: 3.5rem;
+    }
 
     .footer_inner_two a {
         font-size  : 14px;
         line-height: 16px;
+    }
+    .social_link_box {
+        padding-top: 1.5rem;
+        padding-bottom: 1.5rem;
+    }
+    .social_link_box li a img {
+        height: 2.4rem;
+        width: 2.4rem;
     }
 }
