--- a/public/frontend/assets/css/login.css
+++ b/public/frontend/assets/css/login.css
@@ -274,6 +274,9 @@
 
 }
 @media (max-width: 767.98px) {
+    .login_section {
+        margin: 2rem 0;
+    }
     .login_section .login_wrapper {
         display: none;
     }
@@ -283,6 +286,24 @@
     }
     .login_section .login_content h3 {
         padding: 1.8rem 0;
+    }
+    .login_section .login_content .submit_btn a, .login_section .login_content .submit_btn button {
+        padding: 1.2rem;
+        font-size: 2rem;
+        line-height: 2.8rem;
+    }
+    .login_section .submit_btns a, .login_section .submit_btns button {
+        font-size: 2rem;
+        line-height: 2.8rem;
+    }
+    .register_content h2 {
+        margin-bottom: 1rem;
+    }
+    .login_section .register_content .input_fild {
+        padding: 0 2.4rem 2.4rem;
+    }
+    .login_section .login_content .reg_btn {
+        margin-top: 0;
     }
     
 }
