--- a/public/frontend/assets/css/book-details.css
+++ b/public/frontend/assets/css/book-details.css
@@ -188,7 +188,7 @@
     max-height: 250px;
     margin    : auto;
     border-left: 1px solid #E0E0E0;
-    padding   : 0 8.6rem 0 6.6rem;
+    padding   : 0 8.6rem;
 }
 .desktop_details .deilvery_info{
     display: none;
@@ -199,11 +199,6 @@
     font-size       : 16px;
     line-height     : 28px;
     color           : #4F7F6C;
-}
-.deilvery_info p img {
-    width: 3.5rem;
-    height: 3.5rem;
-    margin-right: 2rem;
 }
 .book_add_btn {
     padding-top: 5rem;
@@ -548,17 +543,8 @@
         border: 0;
     }
     .deilvery_info p {
-        padding: 2.9rem 1.2rem 0 0;
+        padding: 2.9rem 1.6rem;
         display: inline-block;
-    }
-    .details_wraper {
-        max-width: 524px;
-        margin-left: 28.5rem;
-    }
-    .deilvery_info p img {
-        width: 3.2rem;
-        height: 3.2rem;
-        margin-right: 1rem;
     }
 }
 @media (max-width: 1199.98px) {
